hotfix: README.md was converted to README.rst

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ line-length = 99
 name = "xivlodestone"
 version = "0.2.0a1"
 description = "xivlodestone is a Python library that interacts with the FFXIV Lodestone website."
-readme = "README.md"
+readme = "README.rst"
 license = "MIT"
 authors = [
   {name = "RikuPy"},
