--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ line-length = 99
 
 [project]
 name = "xivlodestone"
-version = "0.4.0a1"
+version = "1.0.0b1"
 description = "xivlodestone is a Python library that interacts with the FFXIV Lodestone website."
 readme = "README.rst"
 license = "MIT"
@@ -12,7 +12,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Topic :: Games/Entertainment",
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -26,8 +26,8 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "aiohttp>=3.11.13",
-    "beautifulsoup4>=4.13.3",
+    "aiohttp>=3.11.16",
+    "beautifulsoup4>=4.13.4",
     "msgspec>=0.19.0",
 ]
 
